# RDirStat

./: Cargo.toml  LINUX_PORT_PLAN.md  LINUX_PORT_TODO.md  README.md
crates/rdirstat-cli/: Cargo.toml
crates/rdirstat-cli/src/: main.rs
crates/rdirstat-core/: Cargo.toml
crates/rdirstat-core/src/: dir_tree.rs  error.rs  file_info.rs  file_type.rs  lib.rs  stats.rs
crates/rdirstat-gui/: Cargo.toml
crates/rdirstat-gui/src/: app.rs  color_map.rs  main.rs  tree_view.rs  treemap.rs
crates/rdirstat-scan/: Cargo.toml
crates/rdirstat-scan/src/: lib.rs  options.rs  scanner.rs  scanner_windows.rs
