[package]
name = "rdirstat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI frontend for RDirStat disk usage analyzer"

[[bin]]
name = "rdirstat"
path = "src/main.rs"

[dependencies]
rdirstat-core = { path = "../rdirstat-core" }
rdirstat-scan = { path = "../rdirstat-scan" }
clap = { workspace = true }
indicatif = { workspace = true }
humansize = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
