[package]
name = "rdirstat-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
rdirstat-core = { path = "../rdirstat-core" }
rdirstat-scan = { path = "../rdirstat-scan" }

anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

# GUI
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
rfd = "0.14" # Native file dialogs
humansize = "2.1"
crossbeam-channel = "0.5" # For background thread communication
