[package]
name = "rdirstat-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast parallel filesystem scanner for RDirStat"

[dependencies]
rdirstat-core = { path = "../rdirstat-core" }
jwalk = { workspace = true }
rayon = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
glob = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
